src/core/snapshots/vue_template_compiler__core__parser__test__slot_dir-4.snap
---
source: src/core/parser.rs
expression: dir

---
Dir:
  name: slot
  argument:
    Static: ".-."
  modifiers: []
  expression:
    content:
      raw: tt
      ops:
        bits: 18
    location:
      start:
        offset: 8
        line: 1
        column: 9
      end:
        offset: 12
        line: 1
        column: 13
  head_loc:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 7
      line: 1
      column: 8
  location:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 12
      line: 1
      column: 13

