src/core/snapshots/vue_template_compiler__core__parser__test__test-12.snap
---
source: src/core/parser.rs
expression: ast

---
children:
  - Plain:
      tag_name: p
      namespace: Html
      properties:
        - Dir:
            name: "on"
            argument:
              Static: _@
            modifiers:
              - stop
            expression:
              content:
                raw: tt
                ops:
                  bits: 10
              location:
                start:
                  offset: 12
                  line: 1
                  column: 13
                end:
                  offset: 16
                  line: 1
                  column: 17
            head_loc:
              start:
                offset: 3
                line: 1
                column: 4
              end:
                offset: 11
                line: 1
                column: 12
            location:
              start:
                offset: 3
                line: 1
                column: 4
              end:
                offset: 16
                line: 1
                column: 17
      children: []
      location:
        start:
          offset: 0
          line: 1
          column: 1
        end:
          offset: 18
          line: 1
          column: 19
location:
  start:
    offset: 0
    line: 1
    column: 1
  end:
    offset: 18
    line: 1
    column: 19

