src/core/snapshots/vue_template_compiler__core__parser__test__test-14.snap
---
source: src/core/parser.rs
expression: ast

---
children:
  - Plain:
      tag_name: p
      namespace: Html
      properties:
        - Dir:
            name: bind
            argument:
              Static: stop
            modifiers:
              - prop
            expression:
              content:
                raw: tt
                ops:
                  bits: 10
              location:
                start:
                  offset: 9
                  line: 1
                  column: 10
                end:
                  offset: 13
                  line: 1
                  column: 14
            head_loc:
              start:
                offset: 3
                line: 1
                column: 4
              end:
                offset: 8
                line: 1
                column: 9
            location:
              start:
                offset: 3
                line: 1
                column: 4
              end:
                offset: 13
                line: 1
                column: 14
      children: []
      location:
        start:
          offset: 0
          line: 1
          column: 1
        end:
          offset: 15
          line: 1
          column: 16
location:
  start:
    offset: 0
    line: 1
    column: 1
  end:
    offset: 15
    line: 1
    column: 16

